# ctc-aligner-rs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
docs/: CPU_PERF_DESIGN.md
examples/: bench_rtfx.rs  check_cuda.rs  ctc_check.rs  dump_logits.rs  text_check.rs
ptx/: MANIFEST.txt  kernels_sm61.ptx  kernels_sm70.ptx  kernels_sm75.ptx  kernels_sm80.ptx  kernels_sm86.ptx  kernels_sm89.ptx  kernels_sm90.ptx
scripts/: compile-ptx.ps1
src/: audio_io.rs  backend.rs  config.rs  cpu_engine.rs  ctc.rs  cudarc_engine.rs  inference.rs  lib.rs  main.rs  postprocess.rs  prebuilt_ptx.rs  raw_tensor.rs  text.rs  weights.rs
src/kernels/: kernels.cu
